OAK-10226: use lucene logic to load content when possible, fixed stemmer differences