@@ -26,6 +26,7 @@ import co.elastic.clients.json.JsonData;
 import com.google.common.base.CaseFormat;
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.oak.api.Blob;
+import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.plugins.index.search.FulltextIndexConstants;
@@ -34,10 +35,10 @@ import org.apache.jackrabbit.oak.plugins.tree.factories.TreeFactory;
 import org.apache.jackrabbit.oak.spi.state.ChildNodeEntry;
 import org.apache.jackrabbit.oak.spi.state.NodeState;
 import org.apache.jackrabbit.oak.spi.state.NodeStateUtils;
-import org.apache.lucene.analysis.charfilter.MappingCharFilterFactory;
 import org.apache.lucene.analysis.en.AbstractWordsFileFilterFactory;
 import org.apache.lucene.analysis.util.AbstractAnalysisFactory;
 import org.apache.lucene.analysis.util.CharFilterFactory;
+import org.apache.lucene.analysis.util.ResourceLoader;
 import org.apache.lucene.analysis.util.TokenFilterFactory;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -46,6 +47,7 @@ import org.slf4j.LoggerFactory;
 
 import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.nio.charset.StandardCharsets;
@@ -61,7 +63,10 @@ import java.util.Spliterators;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
+
+import static org.apache.jackrabbit.oak.plugins.index.elastic.index.ElasticCustomAnalyzerMappings.*;
 
 /**
  * Loads custom analysis index settings from a JCR NodeState. It also takes care of required transformations from Lucene
@@ -81,15 +86,23 @@ public class ElasticCustomAnalyzer {
     );
 
     /*
-     * Mappings for lucene options not available anymore to supported elastic counterparts
+     * In some cases lucene cannot be used for parsing. This map contains pluggable transformers to execute on specific
+     * filter keys.
      */
-    private static final Map<Class<? extends AbstractAnalysisFactory>, Map<String, String>> CONFIGURATION_MAPPING;
+    private static final Map<String, Function<String, Stream<String>>> CONTENT_TRANSFORMERS;
 
     static {
-        CONFIGURATION_MAPPING = new LinkedHashMap<>();
-        CONFIGURATION_MAPPING.put(AbstractWordsFileFilterFactory.class, Map.of("words", "stopwords"));
-        CONFIGURATION_MAPPING.put(MappingCharFilterFactory.class, Map.of("mapping", "mappings"));
+        CONTENT_TRANSFORMERS = new LinkedHashMap<>();
+        CONTENT_TRANSFORMERS.put("mapping", line -> {
+            if (line.length() == 0 || line.startsWith("#")) {
+                return Stream.empty();
+            } else {
+                return Stream.of(line.replaceAll("\"", ""));
+            }
+        });
     }
+
+    private static final Function<String, Stream<String>> NOOP_TRANSFORMATION = Stream::of;
 
     @Nullable
     public static IndexSettingsAnalysis.Builder buildCustomAnalyzers(NodeState state, String analyzerName) {
@@ -108,7 +121,7 @@ public class ElasticCustomAnalyzer {
                     // content params, usually stop words
                     for (ChildNodeEntry nodeEntry : defaultAnalyzer.getChildNodeEntries()) {
                         try {
-                            analyzer.put(normalize(nodeEntry.getName()), loadContent(nodeEntry.getNodeState(), nodeEntry.getName()));
+                            analyzer.put(normalize(nodeEntry.getName()), loadContent(nodeEntry.getNodeState(), nodeEntry.getName(), NOOP_TRANSFORMATION));
                         } catch (IOException e) {
                             throw new IllegalStateException("Unable to load content for node entry " + nodeEntry.getName(), e);
                         }
@@ -160,21 +173,63 @@ public class ElasticCustomAnalyzer {
         Tree tree = TreeFactory.createReadOnlyTree(state);
         for (Tree t : tree.getChildren()) {
             NodeState child = state.getChildNode(t.getName());
-            Class<? extends AbstractAnalysisFactory> tff = lookup.apply(t.getName());
-            String name;
-            try {
-                name = normalize((String) tff.getField("NAME").get(null));
-            } catch (Exception e) {
-                LOG.warn("unable to get the filter name using reflection. Try using the normalized node name", e);
-                name = normalize(t.getName());
-            }
-            Map<String, String> mappings =
-                    CONFIGURATION_MAPPING.entrySet().stream()
-                            .filter(k -> k.getKey().isAssignableFrom(tff))
-                            .map(Map.Entry::getValue)
-                            .findFirst().orElseGet(Collections::emptyMap);
-            Map<String, Object> args = convertNodeState(child, mappings);
 
+            String name;
+            List<String> content = null;
+            Map<String, String> mappings;
+            try {
+                Class<? extends AbstractAnalysisFactory> tff = lookup.apply(t.getName());
+
+                Map<String, String> changes =
+                        LUCENE_VERSIONS.entrySet().stream()
+                                .filter(k -> k.getKey().isAssignableFrom(tff))
+                                .map(Map.Entry::getValue)
+                                .findFirst().orElseGet(Collections::emptyMap);
+                Map<String, String> luceneArgs = StreamSupport.stream(child.getProperties().spliterator(), false)
+                        .filter(ps -> {
+                            String value = changes.get(ps.getName());
+                            return value == null || value.length() > 0;
+                        })
+                        .collect(Collectors.toMap(PropertyState::getName, ps -> ps.getValue(Type.STRING)));
+
+                AbstractAnalysisFactory luceneFactory = tff.getConstructor(Map.class).newInstance(luceneArgs);
+                if (luceneFactory instanceof AbstractWordsFileFilterFactory) {
+                    AbstractWordsFileFilterFactory wordsFF = ((AbstractWordsFileFilterFactory) luceneFactory);
+                    // this will parse/load the content handling different formats, comments, etc
+                    wordsFF.inform(new NodeStateResourceLoader(child));
+                    content = wordsFF.getWords().stream().map(w ->
+                            new String(new String(((char[]) w)).getBytes(StandardCharsets.UTF_8))
+                    ).collect(Collectors.toList());
+                }
+
+                name = normalize((String) tff.getField("NAME").get(null));
+                mappings = LUCENE_ELASTIC.entrySet().stream()
+                        .filter(k -> k.getKey().isAssignableFrom(tff))
+                        .map(Map.Entry::getValue)
+                        .findFirst().orElseGet(Collections::emptyMap);
+            } catch (Exception e) {
+                LOG.warn("unable introspect lucene internal factories to perform transformations. " +
+                        "Current configuration will be used: {}", e.getMessage());
+                name = normalize(t.getName());
+                mappings = Collections.emptyMap();
+            }
+
+            Map<String, Object> args = convertNodeState(child, mappings, content);
+
+            // stemmer in elastic don't have language based configurations. They all stay under the stemmer config with
+            // a language parameter
+            if (name.endsWith("_stem")) {
+                String language = STEMMER.get(name);
+                if (language == null) {
+                    language = name.substring(0, name.length() - "_stem".length());
+                    // we then have to reverse the named parts
+                    List<String> languageParts = Arrays.asList(language.split("_"));
+                    Collections.reverse(languageParts);
+                    language = String.join("_", languageParts);
+                    args.put("language", language);
+                }
+                name = "stemmer";
+            }
             args.put(ANALYZER_TYPE, name);
 
             filters.put(name + "_" + i, factory.apply(name, JsonData.of(args)));
@@ -183,16 +238,14 @@ public class ElasticCustomAnalyzer {
         return filters;
     }
 
-    private static List<String> loadContent(NodeState file, String name) throws IOException {
+    private static List<String> loadContent(NodeState file, String name, Function<String, Stream<String>> transformer) throws IOException {
         Blob blob = ConfigUtil.getBlob(file, name);
         try (Reader content = new InputStreamReader(Objects.requireNonNull(blob).getNewStream(), StandardCharsets.UTF_8)) {
             try (BufferedReader br = new BufferedReader(content)) {
                 return br.lines()
                         .map(String::trim)
-                        // remove empty lines and comments
-                        .filter(l -> l.length() > 0 && !l.startsWith("#"))
-                        // token/filters configuration does not have to be wrapped in double quotes
-                        .map(l -> l.replaceAll("\"", ""))
+                        // apply specific transformations
+                        .flatMap(transformer)
                         .collect(Collectors.toList());
             }
         }
@@ -222,30 +275,64 @@ public class ElasticCustomAnalyzer {
     }
 
     private static Map<String, Object> convertNodeState(NodeState state) {
-        return convertNodeState(state, Collections.emptyMap());
+        return convertNodeState(state, Map.of(), List.of());
     }
 
-    private static Map<String, Object> convertNodeState(NodeState state, Map<String, String> mapping) {
+    private static Map<String, Object> convertNodeState(NodeState state, Map<String, String> mapping, List<String> preloadedContent) {
         return StreamSupport.stream(Spliterators.spliteratorUnknownSize(state.getProperties().iterator(), Spliterator.ORDERED), false)
                 .filter(ps -> ps.getType() != Type.BINARY &&
                         !ps.isArray() &&
                         !NodeStateUtils.isHidden(ps.getName()) &&
                         !IGNORE_PROP_NAMES.contains(ps.getName())
-                ).collect(Collectors.toMap(ps -> {
+                )
+                .filter(ps -> {
+                    String value = mapping.get(ps.getName());
+                    return value == null || value.length() > 0;
+                })
+                .collect(Collectors.toMap(ps -> {
                     String remappedName = mapping.get(ps.getName());
                     return remappedName != null ? remappedName : ps.getName();
                 }, ps -> {
                     String value = ps.getValue(Type.STRING);
                     List<String> values = Arrays.asList(value.split(","));
                     if (values.stream().allMatch(v -> state.hasChildNode(v.trim()))) {
-                        return values.stream().flatMap(v -> {
+                        return Objects.requireNonNullElseGet(preloadedContent, () -> values.stream().flatMap(v -> {
                             try {
-                                return loadContent(state.getChildNode(v.trim()), v.trim()).stream();
+                                return loadContent(state.getChildNode(v.trim()), v.trim(),
+                                        CONTENT_TRANSFORMERS.getOrDefault(ps.getName(), NOOP_TRANSFORMATION)).stream();
                             } catch (IOException e) {
                                 throw new IllegalStateException(e);
                             }
-                        }).collect(Collectors.toList());
+                        }).collect(Collectors.toList()));
                     } else return value;
                 }));
+    }
+
+    /**
+     * This loader is just used to load resources in order to benefit from parser (eg: to remove comments or support multiple
+     * formats) already implemented in lucene.
+     */
+    private static class NodeStateResourceLoader implements ResourceLoader {
+
+        private final NodeState nodeState;
+
+        public NodeStateResourceLoader(NodeState nodeState) {
+            this.nodeState = nodeState;
+        }
+
+        @Override
+        public InputStream openResource(String resource) {
+            return ConfigUtil.getBlob(nodeState.getChildNode(resource), resource).getNewStream();
+        }
+
+        @Override
+        public <T> Class<? extends T> findClass(String cname, Class<T> expectedType) {
+            return null;
+        }
+
+        @Override
+        public <T> T newInstance(String cname, Class<T> expectedType) {
+            return null;
+        }
     }
 }
